WhileDB语言简单编译器/while_db_naive_compiler/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR TM_IDENT
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    9 NT_EXPR0: TM_NAT
   10         | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   11         | TM_IDENT
   12         | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   13         | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN

   14 NT_EXPR1: TM_NOT NT_EXPR
   15         | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   16         | NT_EXPR0

   17 NT_EXPR: NT_EXPR1
   18        | TM_MINUS NT_EXPR
   19        | TM_MUL NT_EXPR
   20        | NT_EXPR TM_MUL NT_EXPR
   21        | NT_EXPR TM_PLUS NT_EXPR
   22        | NT_EXPR TM_MINUS NT_EXPR
   23        | NT_EXPR TM_DIV NT_EXPR
   24        | NT_EXPR TM_MOD NT_EXPR
   25        | NT_EXPR TM_LT NT_EXPR
   26        | NT_EXPR TM_GT NT_EXPR
   27        | NT_EXPR TM_LE NT_EXPR
   28        | NT_EXPR TM_GE NT_EXPR
   29        | NT_EXPR TM_EQ NT_EXPR
   30        | NT_EXPR TM_NE NT_EXPR
   31        | NT_EXPR TM_AND NT_EXPR
   32        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 9
    TM_IDENT <i> (259) 2 11
    TM_LEFT_BRACE <none> (260) 5 6
    TM_RIGHT_BRACE <none> (261) 5 6
    TM_LEFT_PAREN <none> (262) 7 8 10 12 13 15
    TM_RIGHT_PAREN <none> (263) 7 8 10 12 13 15
    TM_SEMICOL <none> (264) 4
    TM_MALLOC <none> (265) 15
    TM_RI <none> (266) 12
    TM_RC <none> (267) 13
    TM_WI <none> (268) 7
    TM_WC <none> (269) 8
    TM_VAR <none> (270) 2
    TM_IF <none> (271) 5
    TM_THEN <none> (272) 5
    TM_ELSE <none> (273) 5
    TM_WHILE <none> (274) 6
    TM_DO <none> (275) 6
    TM_ASGNOP <none> (276) 3
    TM_OR <none> (277) 32
    TM_AND <none> (278) 31
    TM_NOT <none> (279) 14
    TM_LT <none> (280) 25
    TM_LE <none> (281) 27
    TM_GT <none> (282) 26
    TM_GE <none> (283) 28
    TM_EQ <none> (284) 29
    TM_NE <none> (285) 30
    TM_PLUS <none> (286) 21
    TM_MINUS <none> (287) 18 22
    TM_MUL <none> (288) 19 20
    TM_DIV <none> (289) 23
    TM_MOD <none> (290) 24
    TM_UMINUS <none> (291)
    TM_DEREF <none> (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    NT_WHOLE <c> (39)
        on left: 1
        on right: 0
    NT_CMD <c> (40)
        on left: 2 3 4 5 6 7 8
        on right: 1 4 5 6
    NT_EXPR0 <e> (41)
        on left: 9 10 11 12 13
        on right: 16
    NT_EXPR1 <e> (42)
        on left: 14 15 16
        on right: 17
    NT_EXPR <e> (43)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 3 5 6 7 8 10 14 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32


State 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_WHOLE  go to state 15
    NT_CMD    go to state 16
    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 19


State 1

    9 NT_EXPR0: TM_NAT .

    $default  reduce using rule 9 (NT_EXPR0)


State 2

   11 NT_EXPR0: TM_IDENT .

    $default  reduce using rule 11 (NT_EXPR0)


State 3

   10 NT_EXPR0: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 20


State 4

   15 NT_EXPR1: TM_MALLOC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 21


State 5

   12 NT_EXPR0: TM_RI . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 22


State 6

   13 NT_EXPR0: TM_RC . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 23


State 7

    7 NT_CMD: TM_WI . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 24


State 8

    8 NT_CMD: TM_WC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 25


State 9

    2 NT_CMD: TM_VAR . TM_IDENT

    TM_IDENT  shift, and go to state 26


State 10

    5 NT_CMD: TM_IF . NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 27


State 11

    6 NT_CMD: TM_WHILE . NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 28


State 12

   14 NT_EXPR1: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 29


State 13

   18 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 30


State 14

   19 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 31


State 15

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 32


State 16

    1 NT_WHOLE: NT_CMD .
    4 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 33

    $default  reduce using rule 1 (NT_WHOLE)


State 17

   16 NT_EXPR1: NT_EXPR0 .

    $default  reduce using rule 16 (NT_EXPR1)


State 18

   17 NT_EXPR: NT_EXPR1 .

    $default  reduce using rule 17 (NT_EXPR)


State 19

    3 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 34
    TM_OR      shift, and go to state 35
    TM_AND     shift, and go to state 36
    TM_LT      shift, and go to state 37
    TM_LE      shift, and go to state 38
    TM_GT      shift, and go to state 39
    TM_GE      shift, and go to state 40
    TM_EQ      shift, and go to state 41
    TM_NE      shift, and go to state 42
    TM_PLUS    shift, and go to state 43
    TM_MINUS   shift, and go to state 44
    TM_MUL     shift, and go to state 45
    TM_DIV     shift, and go to state 46
    TM_MOD     shift, and go to state 47


State 20

   10 NT_EXPR0: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 48
    TM_OR           shift, and go to state 35
    TM_AND          shift, and go to state 36
    TM_LT           shift, and go to state 37
    TM_LE           shift, and go to state 38
    TM_GT           shift, and go to state 39
    TM_GE           shift, and go to state 40
    TM_EQ           shift, and go to state 41
    TM_NE           shift, and go to state 42
    TM_PLUS         shift, and go to state 43
    TM_MINUS        shift, and go to state 44
    TM_MUL          shift, and go to state 45
    TM_DIV          shift, and go to state 46
    TM_MOD          shift, and go to state 47


State 21

   15 NT_EXPR1: TM_MALLOC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 49


State 22

   12 NT_EXPR0: TM_RI TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 50


State 23

   13 NT_EXPR0: TM_RC TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 51


State 24

    7 NT_CMD: TM_WI TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 52


State 25

    8 NT_CMD: TM_WC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 53


State 26

    2 NT_CMD: TM_VAR TM_IDENT .

    $default  reduce using rule 2 (NT_CMD)


State 27

    5 NT_CMD: TM_IF NT_EXPR . TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_THEN   shift, and go to state 54
    TM_OR     shift, and go to state 35
    TM_AND    shift, and go to state 36
    TM_LT     shift, and go to state 37
    TM_LE     shift, and go to state 38
    TM_GT     shift, and go to state 39
    TM_GE     shift, and go to state 40
    TM_EQ     shift, and go to state 41
    TM_NE     shift, and go to state 42
    TM_PLUS   shift, and go to state 43
    TM_MINUS  shift, and go to state 44
    TM_MUL    shift, and go to state 45
    TM_DIV    shift, and go to state 46
    TM_MOD    shift, and go to state 47


State 28

    6 NT_CMD: TM_WHILE NT_EXPR . TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_DO     shift, and go to state 55
    TM_OR     shift, and go to state 35
    TM_AND    shift, and go to state 36
    TM_LT     shift, and go to state 37
    TM_LE     shift, and go to state 38
    TM_GT     shift, and go to state 39
    TM_GE     shift, and go to state 40
    TM_EQ     shift, and go to state 41
    TM_NE     shift, and go to state 42
    TM_PLUS   shift, and go to state 43
    TM_MINUS  shift, and go to state 44
    TM_MUL    shift, and go to state 45
    TM_DIV    shift, and go to state 46
    TM_MOD    shift, and go to state 47


State 29

   14 NT_EXPR1: TM_NOT NT_EXPR .
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 14 (NT_EXPR1)


State 30

   18 NT_EXPR: TM_MINUS NT_EXPR .
   20        | NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 18 (NT_EXPR)


State 31

   19 NT_EXPR: TM_MUL NT_EXPR .
   20        | NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 19 (NT_EXPR)


State 32

    0 $accept: NT_WHOLE $end .

    $default  accept


State 33

    4 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_CMD    go to state 56
    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 19


State 34

    3 NT_CMD: NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 57


State 35

   32 NT_EXPR: NT_EXPR TM_OR . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 58


State 36

   31 NT_EXPR: NT_EXPR TM_AND . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 59


State 37

   25 NT_EXPR: NT_EXPR TM_LT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 60


State 38

   27 NT_EXPR: NT_EXPR TM_LE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 61


State 39

   26 NT_EXPR: NT_EXPR TM_GT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 62


State 40

   28 NT_EXPR: NT_EXPR TM_GE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 63


State 41

   29 NT_EXPR: NT_EXPR TM_EQ . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 64


State 42

   30 NT_EXPR: NT_EXPR TM_NE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 65


State 43

   21 NT_EXPR: NT_EXPR TM_PLUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 66


State 44

   22 NT_EXPR: NT_EXPR TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 67


State 45

   20 NT_EXPR: NT_EXPR TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 68


State 46

   23 NT_EXPR: NT_EXPR TM_DIV . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 69


State 47

   24 NT_EXPR: NT_EXPR TM_MOD . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 70


State 48

   10 NT_EXPR0: TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN .

    $default  reduce using rule 10 (NT_EXPR0)


State 49

   15 NT_EXPR1: TM_MALLOC TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 71
    TM_OR           shift, and go to state 35
    TM_AND          shift, and go to state 36
    TM_LT           shift, and go to state 37
    TM_LE           shift, and go to state 38
    TM_GT           shift, and go to state 39
    TM_GE           shift, and go to state 40
    TM_EQ           shift, and go to state 41
    TM_NE           shift, and go to state 42
    TM_PLUS         shift, and go to state 43
    TM_MINUS        shift, and go to state 44
    TM_MUL          shift, and go to state 45
    TM_DIV          shift, and go to state 46
    TM_MOD          shift, and go to state 47


State 50
